# automatizacion-planeacion-vpp

./: .gitignore  README.md  pyproject.toml
01_excels_entrada/: Matriz_Captura_v2_ProColombia.xlsx
04_plantillas/: Plantilla_Misional.pptx  Plantilla_Territorial.pptx  Plantilla_Transversal.pptx
docs/: Guia_Automatizacion_ProColombia.md
notebooks/: 2026-03-31 Automatización seguimiento planeación VPP.ipynb
procolombia/: __init__.py  config.py  ejemplos.py  excel_constructores.py  excel_lectores.py  orquestador.py  pptx_gen.py  tests.py  utils.py
